# rag_demo

./: .gitignore  .vercelignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt
backend/: ARCHITECTURE.md  DESIGN_PATTERNS.md  README.md  api.py  rag_app.py
backend/application/: __init__.py  dependencies.py
backend/chroma_db/: chroma.sqlite3
backend/documents/: sample1.txt  sample2.txt  sample3.txt
backend/domain/entities/: document.py
backend/domain/repositories/: document_repository.py  llm_repository.py  vectorstore_repository.py
backend/infrastructure/: __init__.py
backend/infrastructure/document_loaders/: __init__.py  langchain_loader.py
backend/infrastructure/embeddings/: __init__.py  sentence_transformers.py
backend/infrastructure/llm/: simple_llm.py
backend/infrastructure/vectorstore/: __init__.py  chroma_vectorstore.py
backend/interfaces/: __init__.py
backend/interfaces/controllers/: __init__.py  rag_controller.py
backend/use_cases/: __init__.py  initialize_rag.py  query_rag.py
chroma_db/: chroma.sqlite3
frontend/: README.md  index.html  script.js  server.py  styles.css
