[project]
name = "rag-demo"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
description = "RAG Application for Vercel deployment"
dependencies = [
    "flask==2.3.0",
    "flask-cors==4.0.0",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-core==0.1.52",
    "langchain-text-splitters==0.0.1",
    "chromadb==0.4.22",
    "sentence-transformers==2.3.1",
    "pypdf==4.0.1",
    "python-dotenv==1.0.0"
]

[tool.python]
version = "3.11"
